// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Render WakaTime Card > should render correctly 1`] = `
"<svg width="500" height="150" viewBox="0 0 500 150" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="title-id desc-id">
  <title id="title-id">WakaTime Stats (last 7 days)</title>
  <desc id="desc-id">Other: 19 mins, TypeScript: 1 min</desc>
  <style>
    .header {
      font: 600 18px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #2f80ed;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    /* The icon reads against the title rather than with it, so it keeps its own color. */
    .title-icon {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-accent {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-band {
      fill: #2f80ed;
      opacity: 0.08;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .header {
        font-size: 15.5px;
      }
    }
    .stat {
      font: 400 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat {
        font-size: 12px;
      }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold {
      font-weight: 400;
    }
    .bold {
      font-weight: 600;
    }
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name {
      font: 400 11px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    #rect-mask rect {
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress {
      animation: growWidthAnimation 0.6s ease-in-out forwards;
      fill: #2f80ed;
    }
    .progress-background {
      fill: #434d58;
    }
    /* Animations */
    @keyframes scaleInAnimation {
      from {
        transform: translate(-5px, 5px) scale(0);
      }
      to {
        transform: translate(-5px, 5px) scale(1);
      }
    }
    @keyframes fadeInAnimation {
      from {
        opacity: 0;
      }
      to {
        opacity: 1;
      }
    }
    @media (prefers-reduced-motion: reduce) {
      * {
        animation-duration: 0s !important;
        animation-delay: 0s !important;
      }
    }
  </style>
  <rect data-testid="card-bg" class="card-bg" x="0.5" y="0.5" rx="8" height="99%" stroke="#0000001f" width="499" fill="#fffefe" stroke-opacity="1" />
  <path data-testid="title-band" class="title-band" d="M0.5 8.5a8 8 0 0 1 8 -8h483a8 8 0 0 1 8 8v37.5h-499z" />
  <g data-testid="card-title" transform="translate(25, 30)">
    <g>
      <svg class="title-icon" x="0" y="-13" viewBox="0 0 16 16" version="1.1" width="16" height="16">
        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm7-3.25v2.992l2.028.812a.75.75 0 0 1-.557 1.392l-2.5-1A.75.75 0 0 1 7 8.25v-3.5a.75.75 0 0 1 1.5 0Z" />
      </svg>
    </g>
    <g transform="translate(25, 0)">
      <text x="0" y="0" class="header" data-testid="header">WakaTime Stats (last 7 days)</text>
    </g>
    <rect data-testid="title-accent" class="title-accent" x="0" y="8" width="32" height="2" rx="1" />
  </g>
  <g data-testid="main-card-body" transform="translate(0, 55)">
    <svg x="0" y="0" width="100%">
      <g>
        <g class="stagger" style="animation-delay: 450ms" transform="translate(25, 0)">
          <text class="stat bold" y="12.5" data-testid="Other">Other:</text>
          <text class="stat" x="355" y="12.5">19 mins</text>
          <svg width="225" x="110" y="4">
            <rect data-testid="progress-background" class="progress-background" rx="5" ry="5" x="0" y="0" width="225" height="8" />
            <svg data-testid="lang-progress" width="89.38%">
              <rect height="8" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 750ms;" />
            </svg>
          </svg>
        </g>
      </g>
      <g transform="translate(0, 25)">
        <g class="stagger" style="animation-delay: 600ms" transform="translate(25, 0)">
          <text class="stat bold" y="12.5" data-testid="TypeScript">TypeScript:</text>
          <text class="stat" x="355" y="12.5">1 min</text>
          <svg width="225" x="110" y="4">
            <rect data-testid="progress-background" class="progress-background" rx="5" ry="5" x="0" y="0" width="225" height="8" />
            <svg data-testid="lang-progress" width="6.25%">
              <rect height="8" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 900ms;" />
            </svg>
          </svg>
        </g>
      </g>
    </svg>
  </g>
</svg>
"
`;

exports[`Test Render WakaTime Card > should render correctly with compact layout 1`] = `
"<svg width="500" height="115" viewBox="0 0 500 115" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="title-id desc-id">
  <title id="title-id">WakaTime Stats (last 7 days)</title>
  <desc id="desc-id">Other: 19 mins, TypeScript: 1 min</desc>
  <style>
    .header {
      font: 600 18px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #2f80ed;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    /* The icon reads against the title rather than with it, so it keeps its own color. */
    .title-icon {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-accent {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-band {
      fill: #2f80ed;
      opacity: 0.08;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .header {
        font-size: 15.5px;
      }
    }
    .stat {
      font: 400 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat {
        font-size: 12px;
      }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold {
      font-weight: 400;
    }
    .bold {
      font-weight: 600;
    }
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name {
      font: 400 11px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    #rect-mask rect {
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress {
      animation: growWidthAnimation 0.6s ease-in-out forwards;
      fill: #2f80ed;
    }
    .progress-background {
      fill: #434d58;
    }
    /* Animations */
    @keyframes scaleInAnimation {
      from {
        transform: translate(-5px, 5px) scale(0);
      }
      to {
        transform: translate(-5px, 5px) scale(1);
      }
    }
    @keyframes fadeInAnimation {
      from {
        opacity: 0;
      }
      to {
        opacity: 1;
      }
    }
    @media (prefers-reduced-motion: reduce) {
      * {
        animation-duration: 0s !important;
        animation-delay: 0s !important;
      }
    }
  </style>
  <rect data-testid="card-bg" class="card-bg" x="0.5" y="0.5" rx="8" height="99%" stroke="#0000001f" width="499" fill="#fffefe" stroke-opacity="1" />
  <path data-testid="title-band" class="title-band" d="M0.5 8.5a8 8 0 0 1 8 -8h483a8 8 0 0 1 8 8v37.5h-499z" />
  <g data-testid="card-title" transform="translate(25, 30)">
    <g>
      <svg class="title-icon" x="0" y="-13" viewBox="0 0 16 16" version="1.1" width="16" height="16">
        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm7-3.25v2.992l2.028.812a.75.75 0 0 1-.557 1.392l-2.5-1A.75.75 0 0 1 7 8.25v-3.5a.75.75 0 0 1 1.5 0Z" />
      </svg>
    </g>
    <g transform="translate(25, 0)">
      <text x="0" y="0" class="header" data-testid="header">WakaTime Stats (last 7 days)</text>
    </g>
    <rect data-testid="title-accent" class="title-accent" x="0" y="8" width="32" height="2" rx="1" />
  </g>
  <g data-testid="main-card-body" transform="translate(0, 55)">
    <svg x="0" y="0" width="100%">
      <mask id="rect-mask">
        <rect x="25" y="0" width="445" height="8" fill="white" rx="5" />
      </mask>
      <rect mask="url(#rect-mask)" data-testid="lang-progress" x="0" y="0" width="420.086" height="8" fill="#858585" />
      <rect mask="url(#rect-mask)" data-testid="lang-progress" x="420.086" y="0" width="29.375" height="8" fill="#3178c6" />
      <g transform="translate(25, 25)">
        <circle cx="5" cy="6" r="5" fill="#858585" />
        <text data-testid="lang-name" x="15" y="10" class="lang-name">Other - 19 mins</text>
      </g>
      <g transform="translate(230, 25)">
        <circle cx="5" cy="6" r="5" fill="#3178c6" />
        <text data-testid="lang-name" x="15" y="10" class="lang-name">TypeScript - 1 min</text>
      </g>
    </svg>
  </g>
</svg>
"
`;

exports[`Test Render WakaTime Card > should render correctly with compact layout when langs_count is set 1`] = `
"<svg width="500" height="115" viewBox="0 0 500 115" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="title-id desc-id">
  <title id="title-id">WakaTime Stats (last 7 days)</title>
  <desc id="desc-id">Other: 19 mins, TypeScript: 1 min</desc>
  <style>
    .header {
      font: 600 18px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #2f80ed;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    /* The icon reads against the title rather than with it, so it keeps its own color. */
    .title-icon {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-accent {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-band {
      fill: #2f80ed;
      opacity: 0.08;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .header {
        font-size: 15.5px;
      }
    }
    .stat {
      font: 400 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat {
        font-size: 12px;
      }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold {
      font-weight: 400;
    }
    .bold {
      font-weight: 600;
    }
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name {
      font: 400 11px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    #rect-mask rect {
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress {
      animation: growWidthAnimation 0.6s ease-in-out forwards;
      fill: #2f80ed;
    }
    .progress-background {
      fill: #434d58;
    }
    /* Animations */
    @keyframes scaleInAnimation {
      from {
        transform: translate(-5px, 5px) scale(0);
      }
      to {
        transform: translate(-5px, 5px) scale(1);
      }
    }
    @keyframes fadeInAnimation {
      from {
        opacity: 0;
      }
      to {
        opacity: 1;
      }
    }
    @media (prefers-reduced-motion: reduce) {
      * {
        animation-duration: 0s !important;
        animation-delay: 0s !important;
      }
    }
  </style>
  <rect data-testid="card-bg" class="card-bg" x="0.5" y="0.5" rx="8" height="99%" stroke="#0000001f" width="499" fill="#fffefe" stroke-opacity="1" />
  <path data-testid="title-band" class="title-band" d="M0.5 8.5a8 8 0 0 1 8 -8h483a8 8 0 0 1 8 8v37.5h-499z" />
  <g data-testid="card-title" transform="translate(25, 30)">
    <g>
      <svg class="title-icon" x="0" y="-13" viewBox="0 0 16 16" version="1.1" width="16" height="16">
        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm7-3.25v2.992l2.028.812a.75.75 0 0 1-.557 1.392l-2.5-1A.75.75 0 0 1 7 8.25v-3.5a.75.75 0 0 1 1.5 0Z" />
      </svg>
    </g>
    <g transform="translate(25, 0)">
      <text x="0" y="0" class="header" data-testid="header">WakaTime Stats (last 7 days)</text>
    </g>
    <rect data-testid="title-accent" class="title-accent" x="0" y="8" width="32" height="2" rx="1" />
  </g>
  <g data-testid="main-card-body" transform="translate(0, 55)">
    <svg x="0" y="0" width="100%">
      <mask id="rect-mask">
        <rect x="25" y="0" width="445" height="8" fill="white" rx="5" />
      </mask>
      <rect mask="url(#rect-mask)" data-testid="lang-progress" x="0" y="0" width="441.095" height="8" fill="#858585" />
      <rect mask="url(#rect-mask)" data-testid="lang-progress" x="441.095" y="0" width="30.831999999999997" height="8" fill="#3178c6" />
      <g transform="translate(25, 25)">
        <circle cx="5" cy="6" r="5" fill="#858585" />
        <text data-testid="lang-name" x="15" y="10" class="lang-name">Other - 19 mins</text>
      </g>
      <g transform="translate(230, 25)">
        <circle cx="5" cy="6" r="5" fill="#3178c6" />
        <text data-testid="lang-name" x="15" y="10" class="lang-name">TypeScript - 1 min</text>
      </g>
    </svg>
  </g>
</svg>
"
`;

exports[`Test Render WakaTime Card > should render correctly with gradient background 1`] = `
"<svg width="500" height="150" viewBox="0 0 500 150" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="title-id desc-id">
  <title id="title-id">WakaTime Stats (last 7 days)</title>
  <desc id="desc-id">Other: 19 mins, TypeScript: 1 min</desc>
  <style>
    .header {
      font: 600 18px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #ffffff;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    /* The icon reads against the title rather than with it, so it keeps its own color. */
    .title-icon {
      fill: #ffffff;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-accent {
      fill: #ffffff;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-band {
      fill: #ffffff;
      opacity: 0.08;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .header {
        font-size: 15.5px;
      }
    }
    .stat {
      font: 400 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #ffffff;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat {
        font-size: 12px;
      }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold {
      font-weight: 400;
    }
    .bold {
      font-weight: 600;
    }
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name {
      font: 400 11px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #ffffff;
    }
    #rect-mask rect {
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress {
      animation: growWidthAnimation 0.6s ease-in-out forwards;
      fill: #ffffff;
    }
    .progress-background {
      fill: #fff0;
    }
    /* Animations */
    @keyframes scaleInAnimation {
      from {
        transform: translate(-5px, 5px) scale(0);
      }
      to {
        transform: translate(-5px, 5px) scale(1);
      }
    }
    @keyframes fadeInAnimation {
      from {
        opacity: 0;
      }
      to {
        opacity: 1;
      }
    }
    @media (prefers-reduced-motion: reduce) {
      * {
        animation-duration: 0s !important;
        animation-delay: 0s !important;
      }
    }
  </style>
  <defs>
    <linearGradient id="gradient" gradientTransform="rotate(35)" gradientUnits="userSpaceOnUse">
      <stop offset="0%" stop-color="#4158d0" />
      <stop offset="50%" stop-color="#c850c0" />
      <stop offset="100%" stop-color="#ffcc70" />
    </linearGradient>
  </defs>
  <rect data-testid="card-bg" class="card-bg" x="0.5" y="0.5" rx="8" height="99%" stroke="#ffffff26" width="499" fill="url(#gradient)" stroke-opacity="1" />
  <path data-testid="title-band" class="title-band" d="M0.5 8.5a8 8 0 0 1 8 -8h483a8 8 0 0 1 8 8v37.5h-499z" />
  <g data-testid="card-title" transform="translate(25, 30)">
    <g>
      <svg class="title-icon" x="0" y="-13" viewBox="0 0 16 16" version="1.1" width="16" height="16">
        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm7-3.25v2.992l2.028.812a.75.75 0 0 1-.557 1.392l-2.5-1A.75.75 0 0 1 7 8.25v-3.5a.75.75 0 0 1 1.5 0Z" />
      </svg>
    </g>
    <g transform="translate(25, 0)">
      <text x="0" y="0" class="header" data-testid="header">WakaTime Stats (last 7 days)</text>
    </g>
    <rect data-testid="title-accent" class="title-accent" x="0" y="8" width="32" height="2" rx="1" />
  </g>
  <g data-testid="main-card-body" transform="translate(0, 55)">
    <svg x="0" y="0" width="100%">
      <g>
        <g class="stagger" style="animation-delay: 450ms" transform="translate(25, 0)">
          <text class="stat bold" y="12.5" data-testid="Other">Other:</text>
          <text class="stat" x="355" y="12.5">19 mins</text>
          <svg width="225" x="110" y="4">
            <rect data-testid="progress-background" class="progress-background" rx="5" ry="5" x="0" y="0" width="225" height="8" />
            <svg data-testid="lang-progress" width="47.39%">
              <rect height="8" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 750ms;" />
            </svg>
          </svg>
        </g>
      </g>
      <g transform="translate(0, 25)">
        <g class="stagger" style="animation-delay: 600ms" transform="translate(25, 0)">
          <text class="stat bold" y="12.5" data-testid="TypeScript">TypeScript:</text>
          <text class="stat" x="355" y="12.5">1 min</text>
          <svg width="225" x="110" y="4">
            <rect data-testid="progress-background" class="progress-background" rx="5" ry="5" x="0" y="0" width="225" height="8" />
            <svg data-testid="lang-progress" width="50.48%">
              <rect height="8" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 900ms;" />
            </svg>
          </svg>
        </g>
      </g>
    </svg>
  </g>
</svg>
"
`;

exports[`Test Render WakaTime Card > should render correctly with percent display format 1`] = `
"<svg width="500" height="150" viewBox="0 0 500 150" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="title-id desc-id">
  <title id="title-id">WakaTime Stats (last 7 days)</title>
  <desc id="desc-id">Other: 47.39 %, TypeScript: 50.48 %</desc>
  <style>
    .header {
      font: 600 18px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #2f80ed;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    /* The icon reads against the title rather than with it, so it keeps its own color. */
    .title-icon {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-accent {
      fill: #4c71f2;
      animation: fadeInAnimation 0.8s ease-in-out forwards;
    }
    .title-band {
      fill: #2f80ed;
      opacity: 0.08;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .header {
        font-size: 15.5px;
      }
    }
    .stat {
      font: 400 14px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    @supports(-moz-appearance: auto) {
      /* Selector detects Firefox */
      .stat {
        font-size: 12px;
      }
    }
    .stagger {
      opacity: 0;
      animation: fadeInAnimation 0.3s ease-in-out forwards;
    }
    .not_bold {
      font-weight: 400;
    }
    .bold {
      font-weight: 600;
    }
    @keyframes slideInAnimation {
      from {
        width: 0;
      }
      to {
        width: calc(100%-100px);
      }
    }
    @keyframes growWidthAnimation {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }
    .lang-name {
      font: 400 11px 'Segoe UI', Ubuntu, "Helvetica Neue", Sans-Serif;
      fill: #434d58;
    }
    #rect-mask rect {
      animation: slideInAnimation 1s ease-in-out forwards;
    }
    .lang-progress {
      animation: growWidthAnimation 0.6s ease-in-out forwards;
      fill: #2f80ed;
    }
    .progress-background {
      fill: #434d58;
    }
    /* Animations */
    @keyframes scaleInAnimation {
      from {
        transform: translate(-5px, 5px) scale(0);
      }
      to {
        transform: translate(-5px, 5px) scale(1);
      }
    }
    @keyframes fadeInAnimation {
      from {
        opacity: 0;
      }
      to {
        opacity: 1;
      }
    }
    @media (prefers-reduced-motion: reduce) {
      * {
        animation-duration: 0s !important;
        animation-delay: 0s !important;
      }
    }
  </style>
  <rect data-testid="card-bg" class="card-bg" x="0.5" y="0.5" rx="8" height="99%" stroke="#0000001f" width="499" fill="#fffefe" stroke-opacity="1" />
  <path data-testid="title-band" class="title-band" d="M0.5 8.5a8 8 0 0 1 8 -8h483a8 8 0 0 1 8 8v37.5h-499z" />
  <g data-testid="card-title" transform="translate(25, 30)">
    <g>
      <svg class="title-icon" x="0" y="-13" viewBox="0 0 16 16" version="1.1" width="16" height="16">
        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm7-3.25v2.992l2.028.812a.75.75 0 0 1-.557 1.392l-2.5-1A.75.75 0 0 1 7 8.25v-3.5a.75.75 0 0 1 1.5 0Z" />
      </svg>
    </g>
    <g transform="translate(25, 0)">
      <text x="0" y="0" class="header" data-testid="header">WakaTime Stats (last 7 days)</text>
    </g>
    <rect data-testid="title-accent" class="title-accent" x="0" y="8" width="32" height="2" rx="1" />
  </g>
  <g data-testid="main-card-body" transform="translate(0, 55)">
    <svg x="0" y="0" width="100%">
      <g>
        <g class="stagger" style="animation-delay: 450ms" transform="translate(25, 0)">
          <text class="stat bold" y="12.5" data-testid="Other">Other:</text>
          <text class="stat" x="355" y="12.5">47.39 %</text>
          <svg width="225" x="110" y="4">
            <rect data-testid="progress-background" class="progress-background" rx="5" ry="5" x="0" y="0" width="225" height="8" />
            <svg data-testid="lang-progress" width="47.39%">
              <rect height="8" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 750ms;" />
            </svg>
          </svg>
        </g>
      </g>
      <g transform="translate(0, 25)">
        <g class="stagger" style="animation-delay: 600ms" transform="translate(25, 0)">
          <text class="stat bold" y="12.5" data-testid="TypeScript">TypeScript:</text>
          <text class="stat" x="355" y="12.5">50.48 %</text>
          <svg width="225" x="110" y="4">
            <rect data-testid="progress-background" class="progress-background" rx="5" ry="5" x="0" y="0" width="225" height="8" />
            <svg data-testid="lang-progress" width="50.48%">
              <rect height="8" rx="5" ry="5" x="0" y="0" class="lang-progress" style="animation-delay: 900ms;" />
            </svg>
          </svg>
        </g>
      </g>
    </svg>
  </g>
</svg>
"
`;
